상품등록 처리

--- a/src/main/resources/templates/basic/item.html
+++ b/src/main/resources/templates/basic/item.html
@@ -40,7 +40,7 @@
         </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'" type="button"
-            th:onclick="|location.href='@{basic/items}'|">목록으로</button>
+            th:onclick="|location.href='@{/basic/items}'|">목록으로</button>
         </div>
     </div>
 </div> <!-- /container -->
